Comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Cursos Gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do artigo 001</p>
+            <h2>Curso de Htmll5 e CSS3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis hic ipsa natus voluptas. Inventore sunt totam esse dolorem quasi officia enim ex provident non facere consectetur doloribus iste, perferendis saepe!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam repellendus in tenetur dolorem. Optio amet eaque atque tenetur quibusdam enim nisi, consequuntur pariatur excepturi ad dolores ab quas possimus fugit.</p>
         </article>
     </main>
 </body>
